# ai_telephony_service_crm

./: .gitignore  API_REFERENCE.md  BACKLOG.md  BETA_GITHUB_ISSUES_TASKLIST.md  CHANGELOG.md  CONTRIBUTING.md  DATA_MODEL.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GCP_GKE.md  DEV_WORKFLOW.md  ENGINEERING.md  LICENSE  OUTLINE.md  PHASE1_VOICE_ASSISTANT_DESIGN.md  PILOT_RUNBOOK.md  PLANNER.md  PRIVACY_POLICY.md  README.md  RELEASES.md  RUNBOOK.md  SECURITY.md  TERMS_OF_SERVICE.md  TOOLS.md  WIKI.md  docker-compose.yml  env.dev.db  env.dev.inmemory  env.dev.redis  env.prod.stub  env.staging.stub
backend/: BACKEND.md  Dockerfile  cloudbuild.yaml  load_test_chat.py  load_test_voice.py  pyproject.toml  seed_demo_data.py  smoke_suite.py
backend/ai_telephony_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/alembic/: env.py
backend/app/: assistant_i18n.py  business_config.py  config.py  db.py  db_models.py  deps.py  i18n.py  logging_config.py  main.py  metrics.py  models.py  repositories.py
backend/scripts/: speech_validation.py
backend/tests/: conftest.py  test_admin_audit_fields.py  test_alerting.py  test_appointment_actions.py  test_assistant_policy_shared_channels.py  test_auth_integration.py  test_auth_integration_real_flows.py  test_billing.py  test_business_admin.py  test_business_admin_management.py  test_calendar_conflicts.py  test_calendar_failure_paths.py  test_calendar_integration.py  test_calendar_service_helpers.py  test_calendar_stub_behavior.py  test_chat_api.py  test_chat_observability.py  test_chat_stream.py  test_chat_widget_endpoints.py  test_config_validation.py  test_conversation.py  test_crm_endpoints.py  test_crm_reschedule_proposals.py  test_db_repositories.py  test_email_service.py  test_feedback.py  test_gcp_speech_provider.py  test_gcp_storage.py  test_geo_and_zip_utils.py  test_gmail_token_persistence.py  test_inmemory_customers.py  test_intent_llm_guardrails.py  test_invites_and_subscription.py  test_nlu_helpers.py  (+29 more)
(+95 files in other folders)
