[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-telephony-backend"
version = "0.1.0"
description = "Backend service for AI telephony assistant and CRM (Phase 1 voice + scheduling)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "google-api-python-client>=2.145.0",
    "google-auth>=2.35.0",
    "google-auth-httplib2>=0.2.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "black>=24.0.0",
]
