[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-telephony-backend"
version = "0.1.2"
description = "Backend service for AI telephony assistant and CRM (Phase 1 voice + scheduling)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "email-validator>=2.2.0",
    "httpx>=0.27.0",
    "bcrypt>=4.1.2",
    "PyJWT>=2.9.0",
    "sentry-sdk>=2.0.0",
    "stripe>=10.10.0",
    "google-api-python-client>=2.145.0",
    "google-auth>=2.35.0",
    "google-auth-httplib2>=0.2.0",
    "google-cloud-storage>=2.18.0",
    "psycopg2-binary>=2.9.9",
    "python-multipart>=0.0.7",
    "sqlalchemy>=2.0.0",
    "reportlab>=4.0.0",
    "alembic>=1.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.6.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
    "bandit>=1.7.9",
    "trio>=0.23.0",
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["app"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
show_error_codes = true
